Bug 1223445 - KeyframeEffectReadOnly objects end up keeping lots of other objects alive too long, r=birtles, a=ritu

--HG--
extra : source : 61455317cc851e8a2bfde7812a90d16d15ea4cb7